Change some Collectors to the new toList method (#2132)